# TinyCLI

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple.c
include/: command.h  context.h  plugin.h  tinycli.h  tinycli_parser.h  tinycli_plugin.h  tinycli_view.h  utils.h
plugins/: CMakeLists.txt
plugins/network/: network.c  network.json
plugins/sample/: CMakeLists.txt  sample.json  sample_plugin.c
plugins/system/: system.c  system.json
src/: CMakeLists.txt  command.c  context.c  main.c  plugin.c  tinycli.c  utils.c
src/core/: tinycli.c  tinycli_parser.c  tinycli_view.c
tools/: gen_plugin_tmpl.py  generate_plugin.py
